# startupai-crew-validation

./: .env.example  .gitignore  README.md  pyproject.toml
src/validation_crew/: __init__.py  crew.py  main.py
src/validation_crew/config/: agents.yaml  tasks.yaml
