[project]
name = "startupai-validation-crew"
version = "1.0.0"
description = "StartupAI Validation Crew - 12-agent D/F/V validation engine"
authors = [{ name = "Chris Walker", email = "chris@startupai.site" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.4.1",
    "crewai-tools>=0.17.0",
    "python-dotenv>=1.0.0",
    "supabase>=2.0.0",
    "httpx>=0.25.0",
    "tavily-python>=0.3.0",
]

[project.scripts]
startupai-validation-crew = "validation_crew.main:run"
run_crew = "validation_crew.main:run"
train = "validation_crew.main:train"
replay = "validation_crew.main:replay"
test = "validation_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/validation_crew"]

[tool.crewai]
type = "crew"
